attempted fixes for song and cutoff on mobile

--- a/src/styles/Title.scss
+++ b/src/styles/Title.scss
@@ -7,7 +7,6 @@ body {
 }
 
 .titleContainer {
-	max-height: 100vh;
 	max-width: 100vw;
 	
 	z-index: -10;
